--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "groupby-json",
-  "version": "1.0.1",
+  "version": "2.0.0",
   "description": "Group JSON objects by attributes",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
@@ -11,11 +11,12 @@
   },
   "license": "MIT",
   "devDependencies": {
-    "typescript": "^3.9.10"
+    "prettier": "^3.5.3",
+    "typescript": "^5.8.3"
   },
   "scripts": {
     "build": "tsc",
-    "format": "prettier --write \"src/**/*.ts\" \"src/**/*.js\"",
+    "format": "prettier --write \"src/**/*.ts\" \"lib/**/*.js\"",
     "prepare": "npm run build",
     "version": "npm run format && git add -A src",
     "postversion": "git push && git push --tags"
@@ -23,7 +24,6 @@
   "files": [
     "lib/**/*"
   ],
-  "dependencies": {},
   "repository": {
     "type": "git",
     "url": "git+https://github.com/pedroentringer/groupby-json"
